# AI_Privacy

./: README.md
COMP60272_Coursework_II/: README.md  environment.yml
COMP60272_Coursework_II/exercise1/: .gitignore  client.py  data_utils.py  main.py  model.py  server.py
COMP60272_Coursework_II/exercise2/: demo_secure_aggregation.py
COMP60272_Coursework_II/exercise3/: client.py  main.py  secure_aggregation.py  server.py
COMP60272_Coursework_II/exercise4/: .gitignore  attack.py  client.py  data_utils.py  main.py  secure_aggregation.py  server.py  solution_4.csv  zkp.py
COMP60272_Coursework_II/exercise4/zkp_rust/: BUILD.md  Cargo.toml  LOCAL_GROTH16.md  README.md
COMP60272_Coursework_II/exercise4/zkp_rust/src/: lib.rs  lib_full_example.rs
