[package]
name = "zkp_rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "zkp_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }

# Use local groth16 implementation
ark-groth16 = { path = "../groth16", default-features = false, features = ["std"] }

# Arkworks dependencies - must match groth16's dependencies exactly
# Use the same git sources as groth16 to ensure version consistency
ark-ff = { git = "https://github.com/arkworks-rs/algebra.git", default-features = false }
ark-ec = { git = "https://github.com/arkworks-rs/algebra.git", default-features = false }
ark-serialize = { git = "https://github.com/arkworks-rs/algebra.git", default-features = false, features = ["derive"] }
ark-poly = { git = "https://github.com/arkworks-rs/algebra.git", default-features = false }
ark-std = { version = "0.5.0", default-features = false, features = ["getrandom"] }

ark-relations = { git = "https://github.com/arkworks-rs/snark.git", default-features = false }
ark-snark = { git = "https://github.com/arkworks-rs/snark.git", default-features = false }

ark-r1cs-std = { git = "https://github.com/arkworks-rs/r1cs-std.git", default-features = false }
ark-bn254 = { git = "https://github.com/arkworks-rs/algebra.git", default-features = false, features = ["curve"] }

# Use the same patch as groth16 to ensure version consistency
[patch.crates-io]
ark-relations = { git = "https://github.com/arkworks-rs/snark.git" }
ark-ff = { git = "https://github.com/arkworks-rs/algebra.git" }
ark-ec = { git = "https://github.com/arkworks-rs/algebra.git" }
ark-poly = { git = "https://github.com/arkworks-rs/algebra.git" }
ark-serialize = { git = "https://github.com/arkworks-rs/algebra.git" }
ark-bn254 = { git = "https://github.com/arkworks-rs/algebra.git" }
ark-r1cs-std = { git = "https://github.com/arkworks-rs/r1cs-std.git" }

